Added word _factor_ for clarification

--- a/11-Point-Patterns.Rmd
+++ b/11-Point-Patterns.Rmd
@@ -392,7 +392,7 @@ a <- round(PPM1$coef[1] , 3)
 b <- round(PPM1$coef[2] , 5)
 ```
 
-The estimated value for $\alpha$ in our example is `r a`. This is interpreted as stating that given a population density of *zero*, the base intensity of the point process is e^`r a`^ or `r sprintf("%g",exp(a))` cafes per square meter (the units are derived from the point's reference system)--a number close to zero (as one would expect). The estimated value for $\beta$ is `r sprintf("%g",b)`. This is interpreted as stating that for every unit increase in the population density derived from the raster, the intensity of the point process increases by e^`r sprintf("%g",b)`^ or `r sprintf("%g",exp(b))`.
+The estimated value for $\alpha$ in our example is `r a`. This is interpreted as stating that given a population density of *zero*, the base intensity of the point process is e^`r a`^ or `r sprintf("%g",exp(a))` cafes per square meter (the units are derived from the point's reference system)--a number close to zero (as one would expect). The estimated value for $\beta$ is `r sprintf("%g",b)`. This is interpreted as stating that for every unit increase in the population density derived from the raster, the intensity of the point process increases by a factor of e^`r sprintf("%g",b)`^ or `r sprintf("%g",exp(b))`.
 
 If we are to plot the relationship between density and population, we  get:
 
