--- a/A09-Spatial-Autocorrelation.Rmd
+++ b/A09-Spatial-Autocorrelation.Rmd
@@ -1,3 +1,8 @@
+---
+output: html_document
+editor_options: 
+  chunk_output_type: console
+---
 # Spatial autocorrelation in R
 
 ```{r, echo = FALSE}
